--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -5,9 +5,15 @@
     "Helvetica Neue", sans-serif;
 }
 
+body {
+  margin: 0px 0px;
+  background-color: #ededed;
+  overflow: hidden;
+}
+
 .header {
   width: 100vw;
-  height: 10%;
+  height: 10vh;
   background-color: rgb(0, 62, 120);
   color: white;
   display: flex;
@@ -15,14 +21,43 @@
 }
 
 .title {
-  width: 90%;
+  width: 80%;
   padding-left: 5%;
 }
 
-body {
-  margin: 0px 0px;
+.sign-in {
+  display: flex;
+  justify-content: center;
+  width: 20%;
 }
 
-.sign-in {
-  width: 10%;
+.body {
+  width: 100vw;
+  height: 90vh;
+  display: flex;
+}
+
+.planning-area {
+  width: 80%;
+  height: 100%;
+  border: 1px solid black;
+  resize: both;
+}
+
+.course-selection {
+  width: 20%;
+  height: 100%;
+  border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+}
+
+.major-selection {
+  background-color: #fdb912;
+  height: 70%;
+}
+
+.completed-courses {
+  background-color: #3c39b1;
+  height: 30%;
 }
