--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -3,8 +3,9 @@
 } */
 
 .root {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
   font-family: "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
     "Helvetica Neue", sans-serif;
 }
@@ -12,7 +13,9 @@
 body {
   margin: 0px 0px;
   background-color: #ededed;
-  overflow: hidden;
+  overflow: auto;
+  /* height: auto; */
+  /* overflow: hidden; */
 }
 
 .header {
@@ -51,12 +54,12 @@ body {
 
 .body {
   width: 100vw;
-  height: 90vh;
+  height: 100%;
   display: flex;
 }
 
 .planning-area {
-  width: 80%;
+  width: 60%;
   height: 100%;
   resize: both;
   /* /* display: flex; */
@@ -69,18 +72,19 @@ body {
   display: flex;
   height: 50%;
   /* width: 100%; */
-  width: 30em;
+  /* width: 30em; */
+  width: 100%;
   justify-content: center;
   /* justify-content: space-evenly; */
   align-items: center;
   flex-wrap: wrap;
-  position: relative;
-  left: 25%;
+  /* position: relative;
+  left: 25%; */
   /* left: auto; */
 }
 
 .course-selection {
-  width: 20%;
+  width: 40%;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -191,7 +195,7 @@ input {
 }
 
 .searchArea {
-  height: 20%;
+  height: 10%;
   width: 100%;
   border: 1px solid black;
   display: flex;
