Added a dropdown capability (Work in progress)
-started the dropdown/collapsability of each of the tables
-Still working on the styles and how it will be executed

--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -10,6 +10,11 @@
     "Helvetica Neue", sans-serif;
 }
 
+img {
+  max-width: 30px;
+  max-height: 30px;
+}
+
 body {
   margin: 0px 0px;
   background-color: #ededed;
