--- a/Frontend/src/components/SchedulePlanner/SchedulePlanner.module.css
+++ b/Frontend/src/components/SchedulePlanner/SchedulePlanner.module.css
@@ -3,9 +3,20 @@
   width: 100%;
   display: flex;
   flex-wrap: wrap;
+  flex-direction: column;
   margin: 10px 10px;
   border-radius: 1em;
   padding: 1em;
+  flex-grow: 3;
+  box-sizing: border-box;
+  /* max-height: 100%; */
+  height: auto;
+  overflow: hidden;
+  
+}
+
+.container * {
+  box-sizing: border-box;
 }
 
 .yearLabel {
@@ -17,17 +28,45 @@
 }
 
 .hidden {
+  height: 0px;
+  overflow: hidden;
   opacity: 0;
-  /* visibility: collapse; */
-  transition: 1s opacity ease-in-out;
+  transition-delay: 1s opacity;
+  transition: 1s height ease-in-out, 1s opacity ease-in-out;
   
 }
 
 .visible {
   /* transform: translateY(0); */
+  height: 200px;
   opacity: 1;
-  transition: 1s opacity ease-in-out;
+  transition: 1s height ease-in-out, 1s opacity ease-in-out;
 
+}
+
+.table {
+  display: flex;
+  flex-direction: column;
+  border-radius: 0.5em;
+  width: 100%;
+  margin: auto;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
+}
+
+.row {
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
+}
+
+.col {
+  flex: 4;
+  padding: 8px;
 }
 
 table {
@@ -52,9 +91,9 @@ img:hover {
   transform:  rotate(360deg);
 }
 
-th {
+/*th {
   padding: 5px 0px;
-}
+ }
 td {
   padding: 15px 10px;
 }
@@ -68,7 +107,7 @@ td,
 thead,
 th {
   border: 1px solid black;
-}
+} */
 
 
 
