--- a/Frontend/src/components/SchedulePlanner/SchedulePlanner.module.css
+++ b/Frontend/src/components/SchedulePlanner/SchedulePlanner.module.css
@@ -12,7 +12,6 @@
   /* max-height: 100%; */
   height: auto;
   overflow: hidden;
-  
 }
 
 .container * {
@@ -30,15 +29,12 @@
   justify-content: space-between;
 }
 
-
-
 .hidden {
   height: 0px;
   overflow: hidden;
   opacity: 0;
   transition-delay: 1s opacity;
   transition: 1s height ease-in-out, 1s opacity ease-in-out;
-  
 }
 
 .visible {
@@ -46,7 +42,6 @@
   height: 200px;
   opacity: 1;
   transition: 1s height ease-in-out, 1s opacity ease-in-out;
-
 }
 
 .table {
@@ -72,6 +67,15 @@
 .col {
   flex: 4;
   padding: 8px;
+  /* background-color: red; */
+  /* position: relative;
+  top: 0px;
+  left: 0px; */
+  /* width: 100%;
+  height: 100%; */
+  width: 300px;
+  height: 30px;
+  border: 1px solid black;
 }
 
 table {
@@ -89,17 +93,16 @@ img {
   transform: rotate(0deg);
   transition-delay: 1s;
   transition: 1s transform ease-in-out;
-
 }
 
 .dropdown {
   border: 1px solid black;
   border-radius: 0.25em;
-  transition: transform 0.75s ease-in-out,  background-color 0.25s ease-in-out 0.76s;
+  transition: transform 0.75s ease-in-out, background-color 0.25s ease-in-out 0.76s;
 }
 
 .dropdown:hover {
-  transform:  rotate(360deg);
+  transform: rotate(360deg);
   background-color: rgb(29, 125, 177);
 }
 
@@ -107,18 +110,17 @@ img {
   border: 1px solid black;
   border-radius: 0.25em;
   padding: 0.25vh;
-  transition: 
-  background-color 0.25s ease-in-out, 
-  transform 0.25s ease-in-out,
-  border-radius 0.25s ease-in-out;
+  transition: background-color 0.25s ease-in-out, transform 0.25s ease-in-out, border-radius 0.25s ease-in-out;
 }
 .delete:hover {
   transform: scale(1.2);
   background-color: rgb(249, 41, 41);
   border-radius: 0.5em;
-  
 }
 
+/* td {
+  background-color: red;
+} */
 
 /*th {
   padding: 5px 0px;
@@ -137,9 +139,6 @@ thead,
 th {
   border: 1px solid black;
 } */
-
-
-
 
 /* th {
   border: 1px solid black;
