--- a/Frontend/src/components/DraggableCourse/DraggableCourse.module.css
+++ b/Frontend/src/components/DraggableCourse/DraggableCourse.module.css
@@ -1,8 +1,9 @@
 .container {
   width: 100px;
-  height: 40px;
+  height: 35px;
   background-color: red;
   color: white;
   cursor: move;
   position: absolute;
+  user-select: none;
 }
