--- a/Frontend/src/components/SchedulePlanner/SchedulePlanner.module.css
+++ b/Frontend/src/components/SchedulePlanner/SchedulePlanner.module.css
@@ -55,27 +55,22 @@
 .header {
   display: flex;
   justify-content: space-between;
-  padding: 8px;
+  border-bottom: 1px solid black;
+  text-align: center;
+  /* padding: 8px; */
 }
 
 .row {
   display: flex;
   justify-content: space-between;
-  padding: 8px;
 }
 
 .col {
   flex: 4;
   padding: 8px;
-  /* background-color: red; */
-  /* position: relative;
-  top: 0px;
-  left: 0px; */
-  /* width: 100%;
-  height: 100%; */
-  width: 300px;
-  height: 30px;
-  border: 1px solid black;
+  height: 35px;
+  text-align: center;
+  border-right: 1px solid black;
 }
 
 table {
@@ -85,8 +80,6 @@ table {
   table-layout: fixed;
   max-height: 0px;
   overflow: hidden;
-  /* margin: 10px 10px; */
-  /* border-radius: 3em; */
 }
 
 img {
