--- a/Frontend/Login/style.css
+++ b/Frontend/Login/style.css
@@ -19,11 +19,13 @@ body{
     display: flex;
     height: 70vh;
     width: 50vh;
+    flex-wrap: wrap;
     justify-content: center;
+    text-align: center;
     background: wheat;
     opacity: 0.94;
     color: black;
-    font-size: larger;
+    font-size: medium;
     border-radius: 10px;
 }
 
@@ -34,13 +36,11 @@ body{
 }
 
 .wrapper p{
-    width: 300px;
+    width: 80%;
     font-weight: normal;
-    margin-top: 5.5vh;
     text-align: center;
-    margin-bottom: 6.5vh;
-    margin-left: 5%;
-    margin-right: 5%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .wrapper .input{
@@ -49,7 +49,7 @@ body{
 
 .input input{
     border-radius: 5px;
-    width: 350px;
+    width: 80%;
     height: 100%;
     background: transparent;
     border: 1px solid white;
@@ -62,7 +62,6 @@ body{
 }
 
 .wrapper .forgot-password {
-    margin-bottom: 14.25vh;
     font-size: medium;
 }
 
@@ -71,13 +70,13 @@ body{
 }
 
 .wrapper .btn{
-    width: 100%;
+    width: 80%;
     height: 30px;
     border-radius: 20px;
     font-size: large;
+    margin: auto;
     font-weight: 300;
     cursor: pointer;
-    margin-bottom: 5.5vh;
     color: white;
     background-color: rgb(37, 148, 37);
     opacity: 1;
@@ -90,7 +89,7 @@ body{
 
 .full-length-input input {
     border-radius: 5px;
-    width: 100%;
+    width: 80%;
     height: 100%;
     background: transparent;
     border: 1px solid white;
@@ -106,8 +105,18 @@ body{
     font-size: medium;
 }
 
-.register a{
-    display: flex;
-    color: black;
+.spacer{
+    margin-bottom: 10vh;
+}
+
+.spacer-small{
+    /* keep small version half of regular */
+    margin-bottom: 5vh;
+}
+
+.wrapper .footer{
+    display: grid;
     justify-content: center;
+    align-content: flex-end;
+    text-align: center;
 }
