--- a/Frontend/Login/style.css
+++ b/Frontend/Login/style.css
@@ -17,8 +17,11 @@ body{
 
 .wrapper{
     display: flex;
-    height: 70vh;
-    width: 50vh;
+    height: auto;
+    width: 25vw;
+    margin: auto;
+    padding-left: 1%;
+    padding-right: 1%;
     flex-wrap: wrap;
     justify-content: center;
     text-align: center;
@@ -26,7 +29,7 @@ body{
     opacity: 0.94;
     color: black;
     font-size: medium;
-    border-radius: 10px;
+    border-radius: 3vh;
 }
 
 .wrapper h1{
@@ -48,13 +51,13 @@ body{
 }
 
 .input input{
-    border-radius: 5px;
+    border-radius: 2vh;
     width: 80%;
     height: 100%;
     background: transparent;
     border: 1px solid white;
     opacity: 1;
-    padding: 7px 7px 7px 7px;
+    padding: 1vh 1vh 1vh 1vh;
 }
 
 .input ::placeholder{
@@ -70,31 +73,18 @@ body{
 }
 
 .wrapper .btn{
-    width: 80%;
-    height: 30px;
-    border-radius: 20px;
+    width: auto;
+    height: auto;
+    border-radius: 5vh;
     font-size: large;
     margin: auto;
+    padding: 1vh 5vh 1vh 5vh;
     font-weight: 300;
     cursor: pointer;
     color: white;
     background-color: rgb(37, 148, 37);
     opacity: 1;
     transition: 0.3s background-color ease-in-out;
-}
-
-.wrapper .full-length-input {
-    margin-bottom: 1vh;
-}
-
-.full-length-input input {
-    border-radius: 5px;
-    width: 80%;
-    height: 100%;
-    background: transparent;
-    border: 1px solid white;
-    opacity: 1;
-    padding: 7px 7px 7px 7px;
 }
 
 .btn:hover{
@@ -119,4 +109,5 @@ body{
     justify-content: center;
     align-content: flex-end;
     text-align: center;
+    margin-bottom: 2vh;
 }
