comments to be added to implement google sign on

--- a/Frontend/Login/style.css
+++ b/Frontend/Login/style.css
@@ -48,14 +48,26 @@ body{
 }
 
 .input input{
+    outline: none;
     border-radius: 5px;
     width: 350px;
     height: 100%;
     background: transparent;
-    border: 1px solid white;
+    /* border: 1px solid white; */
     opacity: 1;
     padding: 7px 7px 7px 7px;
+    border: none;
+    /* border-width: 0px; */
+    transition: 1s border ease-in-out;
+
 }
+
+.input input:focus {
+    border-bottom: 1px solid black;
+    transition: 1s border ease-in-out;
+
+    
+} 
 
 .input ::placeholder{
     color: darkslategray;
