--- a/Frontend/src/components/DraggableCourse/DraggableCourse.module.css
+++ b/Frontend/src/components/DraggableCourse/DraggableCourse.module.css
@@ -1,9 +1,21 @@
 .container {
   width: 100px;
-  height: 35px;
-  background-color: red;
+  height: auto;
+  display: flex;
+  background-color: rgba(77, 76, 76, 0.633);
   color: white;
   cursor: move;
   position: absolute;
+  padding: 0.5em;
   user-select: none;
+  border-radius: 1em;
+  border: 2px solid black;
+  justify-content: center;
 }
+
+
+.text {
+
+  
+}
+
