--- a/Frontend/src/components/SchedulePlanner/SchedulePlanner.module.css
+++ b/Frontend/src/components/SchedulePlanner/SchedulePlanner.module.css
@@ -9,6 +9,7 @@
   padding: 1em;
   flex-grow: 3;
   box-sizing: border-box;
+  /* height: 200px; */
   /* max-height: 100%; */
   height: auto;
   overflow: hidden;
