--- a/Frontend/src/components/SchedulePlanner/SchedulePlanner.module.css
+++ b/Frontend/src/components/SchedulePlanner/SchedulePlanner.module.css
@@ -12,6 +12,8 @@
   /* max-height: 100%; */
   height: auto;
   overflow: hidden;
+  z-index: 0;
+
 }
 
 .container * {
@@ -20,13 +22,14 @@
 
 .yearLabel {
   width: 100%;
-  background-color: #545759;
-  color: white;
+  /* background-color: #545759; */
+  color: black;
   padding: 10px 10px;
   text-align: center;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  border-radius: 0.5em;
 }
 
 .hidden {
@@ -104,6 +107,7 @@ img {
   border-radius: 0.25em;
   padding: 0.25vh;
   transition: background-color 0.25s ease-in-out, transform 0.25s ease-in-out, border-radius 0.25s ease-in-out;
+  z-index: -1;
 }
 .delete:hover {
   transform: scale(1.2);
@@ -113,6 +117,11 @@ img {
 
 .date::placeholder {
   color: white;
+}
+.date {
+  padding: 0.5em;
+  border-radius: 0.5em;
+  border: 2px solid black;
 }
 
 /* td {
