--- a/Frontend/src/components/DepartmentSearch/DepartmentSearch.module.css
+++ b/Frontend/src/components/DepartmentSearch/DepartmentSearch.module.css
@@ -10,8 +10,8 @@
 }
 
 .label {
-  border: 1px solid black;
-  background-color: #cdcdcd;
+  border: 1px solid blue;
+  background-color: #6362627b;
   border-radius: 5%;
   height: 100%;
   /* width: fit-content; */
@@ -22,7 +22,7 @@
 }
 
 .searchBar {
-  border: 1px solid black;
+  border: 1px solid red;
   border-left: none;
   padding: 0px 10px;
   /* width: 50%; */
@@ -33,6 +33,8 @@
   display: flex;
   align-items: center;
 }
+
+
 
 input {
   width: 100%;
@@ -64,3 +66,6 @@ ul {
   overflow: scroll;
   font-size: 12px;
 }
+
+
+
