--- a/Frontend/src/components/SchedulePlanner/SchedulePlanner.module.css
+++ b/Frontend/src/components/SchedulePlanner/SchedulePlanner.module.css
@@ -12,7 +12,7 @@
   /* height: 200px; */
   /* max-height: 100%; */
   height: auto;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .container * {
@@ -67,9 +67,12 @@
 }
 
 .col {
+  display: flex;
+  justify-content: center;
+  padding: 4px 4px;
   flex: 4;
-  padding: 8px;
-  height: 35px;
+  /* padding: 8px; */
+  height: 50px;
   text-align: center;
   border-right: 1px solid black;
 }
