--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -33,7 +33,7 @@ body {
 .header {
   width: 100vw;
   height: 10vh;
-  background-color: rgb(0, 62, 120);
+  background-color: #0a74ed;
   color: white;
   display: flex;
   align-items: center;
@@ -73,11 +73,12 @@ body {
 }
 
 .planning-area {
-  width: 60%;
+  width: 65%;
   height: 100%;
   resize: both;
   display: flex;
   flex-direction: column;
+  margin: 2em;
 
   /* align-items: center; */
   /* display: flex;
@@ -100,14 +101,16 @@ body {
 }
 
 .course-selection {
-  width: 40%;
+  width: 35%;
   height: 100%;
+  /* max-height: fit-content; */
   display: flex;
   flex-direction: column;
+  
 }
 
 .major-selection {
-  background-color: #818181;
+  background-color: #e1e0e0;
   height: 70%;
   display: flex;
   flex-wrap: wrap;
@@ -115,7 +118,7 @@ body {
 }
 
 .completed-courses {
-  background-color: #3c39b1;
+  background-color: #e1e0e0;
   height: 30%;
 }
 
@@ -134,7 +137,7 @@ input {
 .majorSearch {
   margin: 1em;
   padding: 0.5em;
-  border-radius: 0.5em;
+  border-radius: 1em;
   background-color: white;
   width: 60%;
   text-align: center;
@@ -225,25 +228,40 @@ input {
 .searchArea {
   height: 10%;
   width: 100%;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 
-.addYearBtn {
-  border-radius: 0.75em;
+.progress {
+  border-radius: 2em;
   padding: 1em;
-  background-color: #8181819e;
-  width: 20%;
+  width: 18%;
+  background-color: #e1e0e0;
+  margin: 1em;
+  transition: 0.25s background-color ease-in-out, 0.25s color ease-in-out, 0.25s width ease-in-out, 0.5s;
+}
+
+.progress:hover {
+  background-color: rgb(167, 42, 250);
+  color: white;
+  width: 22%;
+}
+
+.addYearBtn {
+  border-radius: 2em;
+  padding: 1em;
+  background-color: #e1e0e0;
+  width: 18%;
   transition: 0.25s background-color ease-in-out, 0.25s color ease-in-out, 0.25s width ease-in-out, 0.5s;
   margin: 1em;
 }
 
 .addYearBtn:hover {
-  background-color: rgba(3, 78, 208, 0.633);
+  background-color: #0a74ed;
   color: white;
-  width: 25%;
+  width: 22%;
 }
 
 .course-bag {
