--- a/Frontend/src/components/SearchBar/SearchBar.module.css
+++ b/Frontend/src/components/SearchBar/SearchBar.module.css
@@ -2,13 +2,44 @@
   position: relative;
   display: flex;
   margin-top: 1em;
-  margin-left: 1em;
+  margin-left: 0.5em;
   justify-content: center;
-  width: 55%;
+  width: 45%;
   /* min-height: 50px; */
   height: 30px;
   /* height: auto; */
   flex-wrap: wrap;
+}
+
+.courseNumberContainer {
+  position: relative;
+  display: flex;
+  margin-top: 1em;
+  margin-left: 0.5em;
+  justify-content: center;
+  width: 30%;
+  /* min-height: 50px; */
+  height: 30px;
+  /* height: auto; */
+  flex-wrap: wrap;
+}
+
+.searchBarContainer {
+  position: relative;
+  display: flex;
+  margin-top: 1em;
+  margin-left: 0.5em;
+  justify-content: center;
+  /* width: 10%; */
+  width: fit-content;
+  /* min-height: 50px; */
+  height: 30px;
+  /* height: auto; */
+  flex-wrap: wrap;
+}
+
+.searchBarContainer:hover {
+  cursor: pointer;
 }
 
 .searchBar {
@@ -22,6 +53,19 @@
   display: flex;
   align-items: center;
   padding-left: 1.5em; /* text-align: center; */
+}
+
+.searchGlass {
+  /* padding: 0.5em; */
+  border-radius: 1em;
+  border: 1px solid #d1d1d1;
+  background-color: #ffffff;
+  width: 100%;
+  /* height: 50px; */
+  height: 100%;
+  display: flex;
+  align-items: center;
+  /* padding-left: 1.5em; text-align: center; */
 }
 
 input::placeholder {
