--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -4,8 +4,13 @@
 
 .root {
   width: 100%;
+  /* min-height: 100vh; */
+  /* height: auto; */
+  overflow: visible;
   height: 100%;
-  overflow: auto;
+  /* min-height: 100%;
+  height: auto; */
+  /* overflow: auto; */
   font-family: "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
     "Helvetica Neue", sans-serif;
 }
@@ -25,7 +30,12 @@ img {
 body {
   margin: 0px 0px;
   background-color: #ededed;
-  overflow: auto;
+  min-height: 100%;
+  height: auto;
+  overflow: visible;
+  /* overflow:  */
+
+  /* overflow: auto; */
   /* height: auto; */
   /* overflow: hidden; */
 }
@@ -33,7 +43,7 @@ body {
 .header {
   width: 100vw;
   height: 10vh;
-  box-shadow: 3px 4px 7px purple !important;
+  /* box-shadow: 3px 4px 7px red !important; */
   /* border: 1px solid red; */
   background-color: #0a74ed;
   color: white;
@@ -77,6 +87,9 @@ body {
 .planning-area {
   width: 65%;
   height: 100%;
+  /* height: fit-content; */
+  /* height: max-content; */
+  overflow: scroll;
   resize: both;
   display: flex;
   flex-direction: column;
@@ -91,7 +104,8 @@ body {
 
 .scheduleArea {
   display: flex;
-  height: 50%;
+  /* height: 50%; */
+  height: fit-content;
   /* width: 100%; */
   /* width: 30em; */
   width: 100%;
@@ -234,38 +248,44 @@ input {
   width: 100%;
   /* border: 1px solid black; */
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   align-items: center;
-}
-
-.progress {
-  border-radius: 2em;
-  padding: 1em;
-  width: 18%;
-  background-color: #e1e0e0;
-  margin: 1em;
-  transition: 0.25s background-color ease-in-out, 0.25s color ease-in-out, 0.25s width ease-in-out, 0.5s;
-}
-
-.progress:hover {
-  background-color: rgb(167, 42, 250);
-  color: white;
-  width: 22%;
 }
 
 .addYearBtn {
   border-radius: 2em;
-  padding: 1em;
-  background-color: #e1e0e0;
-  width: 18%;
-  transition: 0.25s background-color ease-in-out, 0.25s color ease-in-out, 0.25s width ease-in-out, 0.5s;
+  border: 1px solid #f4f4f4;
+  background-color: #f4f4f4;
+  color: #697784;
+  /* width: 7em; */
+  width: fit-content;
+  padding: 0px 1em;
+  height: 2.5em;
   margin: 1em;
+  transition: border 0.25s ease-in-out;
 }
 
 .addYearBtn:hover {
-  background-color: #0a74ed;
-  color: white;
-  width: 22%;
+  border: 1px solid #50b8f8;
+  cursor: pointer;
+}
+
+.settingButton {
+  border-radius: 2em;
+  border: 1px solid #f4f4f4;
+  background-color: #f4f4f4;
+  color: #697784;
+  /* width: 7em; */
+  width: fit-content;
+  padding: 0px 2em;
+  height: 2.5em;
+  margin: 0.5em;
+  transition: border 0.25s ease-in-out;
+}
+
+.settingButton:hover {
+  border: 1px solid #50b8f8;
+  cursor: pointer;
 }
 
 .course-bag {
@@ -277,4 +297,6 @@ input {
   width: 100%;
   height: 80%;
   align-content: flex-start;
+  margin-right: 2%;
+  margin-left: 2%;
 }
