--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -252,6 +252,8 @@ input {
   align-items: center;
 }
 
+
+
 .addYearBtn {
   border-radius: 2em;
   border: 1px solid #f4f4f4;
@@ -299,4 +301,38 @@ input {
   align-content: flex-start;
   margin-right: 2%;
   margin-left: 2%;
+  
+}
+
+
+@media screen and (max-width: 1350px) {
+  .course-bag {
+    display: flex;
+    flex-direction: column-reverse;
+    flex-wrap: wrap;
+    row-gap: 10px;
+    /* column-gap: 5px;
+    width: 100%;
+    height: 80%; */
+    align-content: center;
+    margin-right: 2%;
+    margin-left: 2%;
+  }
+}
+
+@media  screen and (max-width: 1000px) {
+  .searchArea {
+    display: flex;
+    flex-direction: column;
+    /* margin-bottom: 3em; */
+    flex-wrap: wrap;
+    gap: 20px;
+    height: 20vh;
+  }
+
+  .searchArea > * {
+    flex: 1 1 calc(100%- 40px);
+    box-sizing: border-box;
+  }
+  
 }
