--- a/Frontend/src/components/DraggableCourse/DraggableCourse.module.css
+++ b/Frontend/src/components/DraggableCourse/DraggableCourse.module.css
@@ -1,8 +1,9 @@
 .container {
-  width: 11em;
+  width: 11vw;
+  min-width: 150px;
   height: 3.5vh;
   display: flex;
-  /* position: rela /tive; */
+  /* position: relative; */
   align-items: center;
   background-color: white;
   color: rgb(201, 201, 201);
@@ -34,6 +35,8 @@
   transform: translateY(2px);
   transition: transform 0.25s ease-in-out;
   padding: 0.2em 0.1em;
+  /* width: 2vw;
+  height: 2vh; */
 }
 
 .delete:hover,
