--- a/Frontend/src/components/SchedulePlanner/SchedulePlanner.module.css
+++ b/Frontend/src/components/SchedulePlanner/SchedulePlanner.module.css
@@ -11,6 +11,7 @@
   /* background-color: #e1e0e0; */
   background-color: #f4f4f4;
   /* background-color: white; */
+  transition: height, 0.5s, ease-in-out;
 }
 
 .expanded {
@@ -85,7 +86,32 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 20px;
+
 }
+
+
+@media screen and (max-width: 1300px) {
+  .tables {
+    flex-wrap: wrap;
+  }
+  .tables > * {
+    flex: 1 1 calc(50% - 40px);
+    box-sizing: border-box;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .tables {
+    flex-wrap: wrap;
+
+  }
+
+  .tables > * {
+    flex: 1 1 100%;
+  }
+}
+
 
 img {
   transform: rotate(0deg);
