--- a/Frontend/src/components/DraggableCourse/DraggableCourse.module.css
+++ b/Frontend/src/components/DraggableCourse/DraggableCourse.module.css
@@ -5,13 +5,11 @@
   display: flex;
   position: relative;
   margin: 0.25em 0.5em;
-  /* position: rela /tive; */
   align-items: center;
   background-color: white;
   color: rgb(201, 201, 201);
   border: 1px solid #dfdfdf;
   border-radius: 0.25em;
-  /* z-index: 5; */
   z-index: 50;
   transition: border 0.25s ease-in-out, background-color 0.5s ease-in-out;
   /* transition: background-color 0.5s ease-in-out; */
@@ -57,24 +55,29 @@
 }
 
 .tooltip {
-  position: absolute;
-  z-index: 20;
+  position: relative;
+  display: inline-block;
+  background-color: #e9e9e9;
+  z-index: 100;
+}
+
+.tooltip .tooltipText {
   border-radius: 0.8em;
-  /* display: flex;
-  justify-content: center;
-  align-items: flex-start; */
   border: 1px solid #dfdfdf;
+  background-color: #e9e9e9;
   width: 16em;
   padding: 0.5em 0.5em;
-  /* height: fit-content; */
-  height: 9em;
-  text-overflow: ellipsis;
-  bottom: 2em;
-  left: 2em;
-  /* bottom: 2.1em;
-  right: 0em; */
-  /* right: 2em; */
-  font-size: 0.7em;
-  color: rgb(201, 201, 201);
-  background-color: #f4f4f4;
+  height: 20em;
+  z-index: 100;
+  text-align: center;
+  position: absolute;
+}
+
+.modal {
+  width: 25em;
+  height: fit-content;
+}
+
+div button {
+  margin-top: 2em;
 }
