--- a/Frontend/src/components/DraggableCourse/DraggableCourse.module.css
+++ b/Frontend/src/components/DraggableCourse/DraggableCourse.module.css
@@ -23,6 +23,11 @@
   border-color: #50b8f8;
 }
 
+/* dialog {
+  display:flex;
+  flex-direction: column;
+} */
+
 .name {
   margin: 0.5em;
   width: 75%;
