--- a/Frontend/src/components/GeneralCourseAlert/GeneralCourseAlert.module.css
+++ b/Frontend/src/components/GeneralCourseAlert/GeneralCourseAlert.module.css
@@ -1,9 +1,9 @@
 .container {
-    z-index: 1;
+    z-index: 51;
     background-color: aliceblue;
     max-width: 40vw;
     max-height:50vh;
-    width: auto;
+    width: 50%;
     height: auto;
     box-shadow: 1em;
     position: absolute;
@@ -22,11 +22,40 @@
     visibility: hidden;
 }
 
+
+
+.progressBar {
+    width: 100%;
+    height: 0.75em;
+    background-color: #0a74ed;
+    color: white;
+    border: 3px solid #0a74ed;
+    border-radius: 1em;
+    text-align:center;
+    font-size: 0.75em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.category {
+    display: flex;
+    flex-direction: row;
+    justify-content:space-between;
+    align-items: center;
+    margin-bottom: 1em;
+}
+
+.categoryName {
+    margin-right: 1em;
+    margin-left: 1em;
+}
+
 .alertBody {
     display:flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-evenly;
+    align-items:stretch;
     max-width: inherit;
     /* border: 2px solid blue; */
 }
