--- a/Frontend/src/components/GeneralCourseAlert/GeneralCourseAlert.module.css
+++ b/Frontend/src/components/GeneralCourseAlert/GeneralCourseAlert.module.css
@@ -1,9 +1,9 @@
 .container {
-    z-index: 51;
+    z-index: 1;
     background-color: aliceblue;
     max-width: 40vw;
     max-height:50vh;
-    width: 50%;
+    width: auto;
     height: auto;
     box-shadow: 1em;
     position: absolute;
@@ -22,40 +22,11 @@
     visibility: hidden;
 }
 
-
-
-.progressBar {
-    width: 100%;
-    height: 0.75em;
-    background-color: #0a74ed;
-    color: white;
-    border: 3px solid #0a74ed;
-    border-radius: 1em;
-    text-align:center;
-    font-size: 0.75em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.category {
-    display: flex;
-    flex-direction: row;
-    justify-content:space-between;
-    align-items: center;
-    margin-bottom: 1em;
-}
-
-.categoryName {
-    margin-right: 1em;
-    margin-left: 1em;
-}
-
 .alertBody {
     display:flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    align-items:stretch;
+    justify-content: center;
+    align-items: center;
     max-width: inherit;
     /* border: 2px solid blue; */
 }
