--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -1,30 +1,16 @@
-/* * {
-  --web
-} */
-
 .root {
   width: 100%;
-  /* min-height: 100vh; */
-  /* height: auto; */
   overflow: visible;
   height: 100%;
-  /* min-height: 100%;
-  height: auto; */
-  /* overflow: auto; */
   font-family: "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
     "Helvetica Neue", sans-serif;
 }
-
-/* .root, .completed-courses, .course-selection{
-  background-color: black;
-} */
 
 .alertPresent {
 }
 
 img {
   max-width: 30px;
-  /* max-height: ; */
 }
 
 body {
@@ -33,11 +19,6 @@ body {
   min-height: 100%;
   height: auto;
   overflow: visible;
-  /* overflow:  */
-
-  /* overflow: auto; */
-  /* height: auto; */
-  /* overflow: hidden; */
 }
 
 .header {
@@ -86,7 +67,8 @@ body {
   width: 65%;
   height: 100%;
   overflow: scroll;
-  resize: both;
+  resize: horizontal;
+  position: relative;
   display: flex;
   flex-direction: column;
   padding: 0em 2em;
@@ -133,6 +115,7 @@ body {
 input {
   all: unset;
 }
+
 /* Styles for the search bar */
 .majorSearch {
   margin: 1em;
@@ -141,8 +124,6 @@ input {
   background-color: white;
   width: 60%;
   text-align: center;
-
-  /* transform: scaleX(0); */
   transition: 0.5s border ease-in-out, 0.5s width ease-in-out, transform 0.25s ease-in-out;
 }
 
@@ -174,7 +155,6 @@ input {
   transition-delay: 0.5s;
   transition: 0.5s max-height ease-in-out;
   border: 2px solid black;
-  /* transition: 0.25s border ease-in-out; */
 }
 
 .majorsOpened::-webkit-scrollbar-button {
@@ -193,8 +173,6 @@ input {
   border-bottom: 2px solid black;
   border-radius: 0.5em;
   padding: 1em;
-  /* padding-top: 2em;
-  padding-bottom: 2em; */
   font-size: 2vh;
   margin-bottom: 0.5em;
   transition: 0.25s background-color ease-in-out, 0.25s border ease-in-out, 0.25s padding ease-in-out,
@@ -204,7 +182,6 @@ input {
 /* Changes properties when we hover each major */
 .major:hover {
   background-color: #8c8b8b;
-  /* border-color: #3c39b1; */
   border-bottom: 4px solid #2c297c;
   color: #3c39b1;
   font-size: 2.5vh;
@@ -228,9 +205,7 @@ input {
 .searchArea {
   height: 10%;
   width: 100%;
-  /* border: 1px solid black; */
   display: flex;
-  /* justify-content: space-between; */
   align-items: center;
 }
 
@@ -239,7 +214,6 @@ input {
   border: 1px solid #f4f4f4;
   background-color: #f4f4f4;
   color: #697784;
-  /* width: 7em; */
   width: fit-content;
   padding: 0px 1em;
   height: 2.5em;
@@ -257,7 +231,6 @@ input {
   border: 1px solid #f4f4f4;
   background-color: #f4f4f4;
   color: #697784;
-  /* width: 7em; */
   width: fit-content;
   padding: 0px 2em;
   height: 2.5em;
@@ -295,9 +268,6 @@ input {
     flex-direction: column-reverse;
     flex-wrap: wrap;
     row-gap: 10px;
-    /* column-gap: 5px;
-    width: 100%;
-    height: 80%; */
     align-content: center;
     margin-right: 2%;
     margin-left: 2%;
@@ -308,7 +278,6 @@ input {
   .searchArea {
     display: flex;
     flex-direction: column;
-    /* margin-bottom: 3em; */
     flex-wrap: wrap;
     gap: 20px;
     height: 20vh;
